book controller done